syntax = "proto3";

option go_package = "./;proto";

package todo;

message GetTodoResponse {
    int64 id = 1;
    string title = 2;
    bool done = 3;
    int64 user_id = 4;
}

message GetTodosRequest {
    int64 id = 1;
}

message GetTodosResponse {
    repeated GetTodoResponse todos = 1;
}

message CreateTodoRequest {
    string title = 1;
    int64 id = 2;
}

message CreateTodoResponse {
    int64 id = 1;
    string title = 2;
    bool done = 3;
    int64 user_id = 4;
}

message UpdateTodoRequest {
    int64 id = 1;
}

message UpdateTodoResponse {
    bool ok = 1;
}

service TodoService {
    rpc GetTodos(GetTodosRequest) returns (GetTodosResponse);
    rpc CreateTodo(CreateTodoRequest) returns (CreateTodoResponse);
    rpc UpdateTodo(UpdateTodoRequest) returns (UpdateTodoResponse);
}
